app-component espacing fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,3 @@
 .content{
-    padding-top: 30vh;
-}
-
-@media screen and (min-width: 1024px){
-    .content{
-        padding-top: 8vh;
-    }
+    padding-top: 8vh;
 }
